<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_requestequipment">

    <fragment
        android:id="@+id/navigation_requestequipment"
        android:name="com.vwaber.cdlexercise.ui.requestequipment.RequestequipmentFragment"
        android:label="@string/title_requestequipment"
        tools:layout="@layout/fragment_requestequipment" >
        <action
            android:id="@+id/action_navigation_requestequipment_to_catalog_category_fragment"
            app:destination="@id/navigation_catalog_category" />
    </fragment>

    <fragment
        android:id="@+id/navigation_activerentals"
        android:name="com.vwaber.cdlexercise.ui.activerentals.ActiverentalsFragment"
        android:label="@string/title_activerentals"
        tools:layout="@layout/fragment_activerentals" />

    <fragment
        android:id="@+id/navigation_openrequests"
        android:name="com.vwaber.cdlexercise.ui.openrequests.OpenrequestsFragment"
        android:label="@string/title_openrequests"
        tools:layout="@layout/fragment_openrequests" />

    <fragment
        android:id="@+id/navigation_myyard"
        android:name="com.vwaber.cdlexercise.ui.myyard.MyyardFragment"
        android:label="@string/title_myyard"
        tools:layout="@layout/fragment_myyard" />

    <fragment
        android:id="@+id/navigation_catalog_category"
        android:name="com.vwaber.cdlexercise.ui.catalog.CatalogCategoryFragment"
        android:label="fragment_catalog_category_list"
        tools:layout="@layout/fragment_catalog_category_list" />

</navigation>
